--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/jest/bin/jest.js"
   },
-  "author": "",
+  "author": "Israel",
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.5.1"
